# puyoteto2-board-detector

./: .gitignore  README.md  pyproject.toml
data/: board_annotations_train.json  board_annotations_val.json  board_info.json  cell_annotations_train.json  cell_annotations_val.json  cell_annotations_visualize.json  preprocessed_board_info.json  readme.txt
puyoteto2-board-detector/: conv_pth2onnx.py  dataset.py  predict_board.py  preprocess_board_annotations.py  preprocess_board_info.py  train.py  transform.py  visualize.py  visualize_board_annotations.py  visualize_board_info.py  visualize_cell_annotations.py  visualize_dataset.py
