[tool.poetry]
name = "puyoteto2-board-detector"
version = "0.1.0"
description = "puyopuyo-tetris2 tetris-board detector"
authors = ["chokotia <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = { url = "https://download.pytorch.org/whl/cu113/torch-1.12.1%2Bcu113-cp39-cp39-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu113/torchvision-0.13.1%2Bcu113-cp39-cp39-win_amd64.whl" }
torchaudio = { url = "https://download.pytorch.org/whl/cu113/torchaudio-0.12.1%2Bcu113-cp39-cp39-win_amd64.whl" }

matplotlib = "^3.5.2"
numpy = "^1.21.5"
pandas = "^1.4.4"
scikit-learn = "^0.24.2"
tqdm = "^4.64.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
